fixed endgame ids

--- a/scout/src/main/res/layout/fragment_stand_scout_auton.xml
+++ b/scout/src/main/res/layout/fragment_stand_scout_auton.xml
@@ -16,6 +16,13 @@
             android:paddingTop="@dimen/activity_vertical_margin">
 
             <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Auton"
+                android:textSize="20sp"/>
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
